Adding correct picture

--- a/index.html
+++ b/index.html
@@ -100,25 +100,25 @@
 										<h2><a href="https://github.com/RumiN29/Fuel-Economy">Fuel Economy<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/RumiN29/Fuel-Economy" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="https://github.com/RumiN29/Fuel-Economy" class="image fit"><img src="images/Fuel_economy.png" alt="" /></a>
 									<p>Inferential Statistic Analysis<br />Facors for vehicle fuel cost</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/RumiN29/Fuel-Economy" class="button">View Project</a></li>
 									</ul>
 								</article>
-								<!--<article>
+								<article>
 									<header>
 										
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<h2><a href="https://public.tableau.com/app/profile/rumi5159">Tableau<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://public.tableau.com/app/profile/rumi5159" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<p>Visualizations in Tableau</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://public.tableau.com/app/profile/rumi5159" class="button">View Project</a></li>
 									</ul>
 								</article>
-								<article>
+								<!--<article>
 									<header>
 										
 										<h2><a href="#">Odio magna<br />
