adding new Tableau picture

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 										<h2><a href="https://public.tableau.com/app/profile/rumi5159">Tableau<br />
 										</a></h2>
 									</header>
-									<a href="https://public.tableau.com/app/profile/rumi5159" class="image fit"><img src="images/Tableau.png" alt="" /></a>
+									<a href="https://public.tableau.com/app/profile/rumi5159" class="image fit"><img src="images/Tableau1.png" alt="" /></a>
 									<p>Visualizations in Tableau</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/rumi5159" class="button">View Project</a></li>
