Adding SQL Practice

--- a/index.html
+++ b/index.html
@@ -118,19 +118,19 @@
 										<li><a href="https://public.tableau.com/app/profile/rumi5159" class="button">View Project</a></li>
 									</ul>
 								</article>
-								<!--<article>
+								<article>
 									<header>
 										
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
+										<h2><a href="https://github.com/RumiN29/SQL_Practice">SQL<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/RumiN29/SQL_Practice" class="image fit"><img src="images/SQL.png" alt="" /></a>
+									<p>SQL coding practice</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/RumiN29/SQL_Practice" class="button">View Project</a></li>
 									</ul>
 								</article>
-								<article>
+								<!--<article>
 									<header>
 										
 										<h2><a href="#">Augue lorem<br />
