--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 										<h2><a href="https://github.com/RumiN29/SQL_Practice">SQL<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/RumiN29/SQL_Practice" class="image fit"><img src="images/SQL.png" alt="" /></a>
+									<a href="https://github.com/RumiN29/SQL_Practice" class="image fit"><img src="images/SQL_icons.png" alt="" /></a>
 									<p>SQL coding practice</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/RumiN29/SQL_Practice" class="button">View Project</a></li>
