Adding Python files

--- a/index.html
+++ b/index.html
@@ -109,6 +109,18 @@
 								<article>
 									<header>
 										
+										<h2><a href="https://github.com/RumiN29/Python_practice">Python<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/RumiN29/Python_practice" class="image fit"><img src="images/Python.png" alt="" /></a>
+									<p>Python coding practice</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/RumiN29/Python_practice" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										
 										<h2><a href="https://public.tableau.com/app/profile/rumi5159">Tableau<br />
 										</a></h2>
 									</header>
