--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 										<h2><a href="https://github.com/RumiN29/Life_expectancy">Life Expectancy Research<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/RumiN29/Life_expectancy" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Research Statistical Analysis<br />Long life expectancy factors</p>
+									<a href="https://github.com/RumiN29/Life_expectancy" class="image fit"><img src="images/Python_Project.png" alt="" /></a>
+									<p>Research Statistical Analysis in Python<br />Long life span factors</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/RumiN29/Life_expectancy" class="button">View Project</a></li>
 									</ul>
@@ -89,7 +89,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/RumiN29/Lariat_Rent_A_Car" class="image fit"><img src="images/Lariat.png" alt="" /></a>
-									<p>Business Analysis<br />Lariat Rent-A-Car Project</p>
+									<p>Business Analysis in Excel<br />Lariat Rent-A-Car Project</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/RumiN29/Lariat_Rent_A_Car" class="button">View Project</a></li>
 									</ul>
